# polyflare

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
crates/polyflare-anthropic/: Cargo.toml
crates/polyflare-anthropic/src/: collect.rs  errors.rs  executor.rs  lib.rs  translate.rs
crates/polyflare-anthropic/tests/: executor_stream.rs  golden_translate.rs
crates/polyflare-codex/: Cargo.toml
crates/polyflare-codex/src/: chatgpt_cloudflare_cookies.rs  codex_headers.rs  codex_version.rs  control_forward.rs  executor.rs  lib.rs  login.rs  oauth.rs
crates/polyflare-codex/src/ws/: codec.rs  conn.rs  delta.rs  executor.rs  mod.rs  turn.rs
crates/polyflare-codex/tests/: control_forward.rs  executor_stream.rs  oauth_refresh.rs  tls_fingerprint.rs
crates/polyflare-core/: Cargo.toml
crates/polyflare-core/src/: continuity.rs  depletion.rs  format.rs  lib.rs  pricing.rs  provider.rs  select.rs  traits.rs  translate.rs  types.rs  weekly_pace.rs
crates/polyflare-server/: Cargo.toml
crates/polyflare-server/dashboard/: index.html  package.json  tailwind.config.ts  vite.config.ts
crates/polyflare-server/dashboard/src/: App.tsx  api.ts  index.css  styles.css
crates/polyflare-server/dashboard/src/auth/: AuthProvider.tsx
crates/polyflare-server/dashboard/src/capabilities/: CapabilitiesProvider.tsx
crates/polyflare-server/dashboard/src/lib/: accountDisplay.ts  accountHealth.ts  api.ts  capacityMap.ts  fleetBalance.ts  format.ts  liveLogFiltering.ts  pagination.ts  providerDiscovery.ts  providerProfiles.ts  providerSelection.ts  queries.ts  quotaDisplay.ts  requestClassification.ts  requestLive.ts  requestOutcome.ts  requestVolume.ts  routingHeartbeat.ts  serviceTier.ts  useAccountActions.tsx  useLogStream.ts
crates/polyflare-server/dashboard/src/pages/: AccountDetail.tsx  Accounts.tsx  Keys.tsx  LiveLogs.tsx  Login.tsx  Overview.tsx  Pools.tsx  Providers.tsx  Reports.tsx  Requests.tsx  Sessions.tsx  Settings.tsx
crates/polyflare-server/dashboard/src/preferences/: QuotaDisplayPreference.tsx
crates/polyflare-server/dashboard/src/privacy/: ScreenShield.tsx
crates/polyflare-server/dashboard/src/shell/: Shell.tsx  Sidebar.tsx  ThemeToggle.tsx
crates/polyflare-server/dashboard/src/ui/: ActionMenu.tsx  Card.tsx  CodexOnboardingDialog.tsx  ConfirmDialog.tsx  CreatePoolDialog.tsx  Grid.tsx  MetricCard.tsx  ProviderMultiFilter.tsx  ProviderTag.tsx  QuotaBars.tsx  ReportSection.tsx  RequestDetails.tsx  ServiceTierBadge.tsx  Sparkline.tsx  StatusPill.tsx  Switch.tsx  Toast.tsx  TransportPill.tsx  icons.ts  useDialogA11y.ts
crates/polyflare-server/dashboard/tests/: accountDisplay.test.ts  accountHealth.test.ts  capacityMap.test.ts  fleetBalance.test.ts  format.test.ts  liveLogFiltering.test.ts  pagination.test.ts  providerDiscovery.test.ts  providerProfiles.test.ts  providerSelection.test.ts  quotaDisplay.test.ts  requestClassification.test.ts  requestLive.test.ts  requestOutcome.test.ts  requestVolume.test.ts  routingHeartbeat.test.ts  serviceTier.test.ts
crates/polyflare-server/examples/: cache_billing_probe.rs  handover_probe.rs  ws_cache_handover_probe.rs  ws_deflate_probe.rs  ws_ratelimit_probe.rs  ws_vs_sse_probe.rs  ws_wedge_demo.rs
crates/polyflare-server/src/: account_cache.rs  account_onboarding.rs  alias.rs  app.rs  auth.rs  catalog.rs  chatgpt_backend.rs  collect_message.rs  config.rs  continuity.rs  control.rs  custom_provider.rs  dashboard.rs  failover.rs  fingerprint_capture.rs  ingress.rs  keys.rs  lib.rs  log_bus.rs  main.rs  metrics.rs  model_catalog.rs  observability.rs  pool_quota.rs  posture.rs  provider_api.rs  reactive_auth.rs  read_api.rs  refresh_locks.rs  retention.rs  runtime_settings.rs  runtime_state.rs  session_key.rs  snapshot.rs  sse.rs  starvation.rs  token_cache.rs  translate_stream.rs  usage_capture.rs  usage_refresh.rs  (+3 more)
crates/polyflare-server/src/ws_relay/: mod.rs  owner.rs  pump.rs  redial.rs  session.rs  signal.rs  sniff.rs  telemetry.rs
crates/polyflare-server/tests/: account_onboarding.rs  api_keys.rs  chatgpt_backend_gateway.rs  client_key_never_log_e2e.rs  codex_fingerprint_parity_gate.rs  commit_barrier.rs  compact_e2e.rs  config_driven_failover.rs  content_safety_lint.rs  continuity_owner_conflict.rs  control_endpoints_e2e.rs  custom_provider.rs  cyber_auto_move.rs  cyber_policy_detection.rs  cyber_pool_capability_resolution.rs  dashboard.rs  dashboard_api.rs  e2e_passthrough.rs  failover_loop.rs  failure_routing.rs  fingerprint_capture_integration.rs  health_tier_e2e.rs  idle_timeout_e2e.rs  inflight_lease_e2e.rs  ingress_relays.rs  large_body.rs  latency_regression.rs  messages_ingress.rs  metrics_endpoint.rs  model_catalog_e2e.rs  no_anchor_failover.rs  observability.rs  ownership.rs  pace_e2e.rs  pool_routing.rs  pool_selection.rs  pool_strategy.rs  provider_dispatch.rs  proxy_client_key_enforcement.rs  read_api.rs  (+20 more)
crates/polyflare-server/tests/support/: mod.rs
crates/polyflare-store/: Cargo.toml
crates/polyflare-store/migrations/: 0001_accounts_and_usage.sql  0002_continuity.sql  0003_provider.sql  0004_request_log.sql  0005_request_log_history.sql  0006_account_pool.sql  0007_request_log_metrics.sql  0008_session_capability.sql  0009_api_keys.sql  0010_usage_history_dedupe.sql  0011_request_log_subagent.sql  0012_request_log_request_id_index.sql  0013_settings.sql  0014_account_onboarding.sql  0015_account_pool_memberships.sql  0016_request_log_session_key.sql  0017_request_log_protocol_outcome.sql  0018_routing_cooldowns.sql  0019_custom_model_providers.sql  0020_provider_model_catalog_visibility.sql  0021_canonical_response_usage.sql  0022_custom_model_profiles.sql
crates/polyflare-store/src/: account.rs  api_key_repo.rs  continuity_repo.rs  crypto.rs  import.rs  lib.rs  onboarding_repo.rs  provider_repo.rs  request_log_repo.rs  settings_repo.rs  store.rs
crates/polyflare-store/tests/: account_repo.rs  import_codex_lb.rs  request_log_repo.rs  store_roundtrip.rs
crates/polyflare-testkit/: Cargo.toml
crates/polyflare-testkit/src/: lib.rs  ws_mock.rs
docs/: CAPABILITY-MARKUP.md  (+21 more)
(+62 files in other folders)
