[workspace]
resolver = "2"
members = [
    "crates/polyflare-core",
    "crates/polyflare-codex",
    "crates/polyflare-anthropic",
    "crates/polyflare-store",
    "crates/polyflare-testkit",
    "crates/polyflare-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-core = "0.3"
futures-util = "0.3"
bytes = "1"
async-trait = "0.1"
thiserror = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
chacha20poly1305 = "0.10"
fernet = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
