[workspace]
resolver = "2"
members = [
    "crates/polyflare-core",
    "crates/polyflare-codex",
    "crates/polyflare-anthropic",
    "crates/polyflare-store",
    "crates/polyflare-testkit",
    "crates/polyflare-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-core = "0.3"
futures-util = "0.3"
bytes = "1"
async-trait = "0.1"
thiserror = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
chacha20poly1305 = "0.10"
# Wipes decrypted OAuth tokens from memory on drop (the in-memory token cache + every transient
# PlainTokens), so they don't linger in freed heap / core dumps.
zeroize = { version = "1", features = ["derive"] }
fernet = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Embeds the built Vite dashboard (crates/polyflare-server/dashboard/dist) into the binary. The
# `mime-guess` feature lets each embedded file report its own Content-Type.
rust-embed = { version = "8", features = ["mime-guess"] }
# M5 TLS fingerprint parity (T-rustls): pinned to the exact rustls/aws-lc-rs versions codex-rs's
# own Cargo.lock resolves to (verified against a local openai/codex checkout), so the Codex
# executor's ClientHello is built by the identical rustls release + aws-lc-rs crypto provider.
# `aws_lc_rs` is already in rustls's default feature set (along with `prefer-post-quantum`) — do
# NOT add `default-features = false` here, or the post-quantum hybrid key share disappears.
rustls = { version = "=0.23.36", features = ["aws_lc_rs"] }
aws-lc-rs = "=1.16.2"
