[workspace]
resolver = "2"
members = [
    "crates/polyflare-core",
    "crates/polyflare-codex",
    "crates/polyflare-anthropic",
    "crates/polyflare-store",
    "crates/polyflare-testkit",
    "crates/polyflare-server",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
futures-core = "0.3"
futures-util = "0.3"
bytes = "1"
async-trait = "0.1"
thiserror = "2"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros"] }
chacha20poly1305 = "0.10"
# Wipes decrypted OAuth tokens from memory on drop (the in-memory token cache + every transient
# PlainTokens), so they don't linger in freed heap / core dumps.
zeroize = { version = "1", features = ["derive"] }
fernet = "0.2"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Embeds the built Vite dashboard (crates/polyflare-server/dashboard/dist) into the binary. The
# `mime-guess` feature lets each embedded file report its own Content-Type.
rust-embed = { version = "8", features = ["mime-guess"] }
# M5 TLS fingerprint parity (T-rustls): pinned to the exact rustls/aws-lc-rs versions codex-rs's
# own Cargo.lock resolves to (verified against a local openai/codex checkout), so the Codex
# executor's ClientHello is built by the identical rustls release + aws-lc-rs crypto provider.
# `aws_lc_rs` is already in rustls's default feature set (along with `prefer-post-quantum`) — do
# NOT add `default-features = false` here, or the post-quantum hybrid key share disappears.
rustls = { version = "=0.23.36", features = ["aws_lc_rs"] }
aws-lc-rs = "=1.16.2"
zstd = "0.13"

# M5a (WS deflate parity, E4(a) — docs/DESIGN-DECISIONS.md): the WS handshake must offer
# `permessage-deflate` the way real codex does, and PolyFlare must actually be able to decode it.
# Stock crates.io `tungstenite`/`tokio-tungstenite` have NO `deflate` Cargo feature at all
# (`cargo add tungstenite@0.27 --features deflate` errors: "unrecognized feature"). Codex itself
# only gets deflate support from **OpenAI's own forks**, pinned by git rev — mirrored here at the
# identical revs (see `codex-rs/Cargo.toml:431,448,557-564` in a local `openai/codex` checkout).
# These forks pin the SAME `rustls = 0.23.36` / `aws-lc-rs = 1.16.2` this workspace already pins
# above (verified against codex-rs's own `Cargo.lock`), so adopting them does not disturb the
# TLS-fingerprint-parity gate.
#
# Supply-chain cost, made visible on purpose: these are third-party GitHub repos pinned by commit
# rev, entirely outside crates.io. If `openai-oss-forks/tokio-tungstenite` or
# `openai-oss-forks/tungstenite-rs` ever move, go private, or force-push away these revs, this
# workspace stops building from a clean checkout (no crates.io fallback exists for the `deflate`
# feature). That is the accepted cost of exact WS parity with real codex — see
# `docs/DESIGN-DECISIONS.md` E4(a).
[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "0e5b2d73aa18dd9f0a50ee9ff199d5aef7594186" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "4fffad30fe373adbdcffab9545e9e9bf4f2fc19f" }

# The tokio-tungstenite fork above references `tungstenite-rs` via an `ssh://` git URL internally;
# without this second patch entry Cargo would try to fetch it a second time over SSH instead of
# reusing the https-fetched rev already patched above. Mirrors codex-rs/Cargo.toml:563-564 exactly.
[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "4fffad30fe373adbdcffab9545e9e9bf4f2fc19f" }
