[package]
name = "polyflare-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
polyflare-core = { path = "../polyflare-core" }
reqwest = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
polyflare-testkit = { path = "../polyflare-testkit" }
