[package]
name = "polyflare-codex"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
polyflare-core = { path = "../polyflare-core" }
# rustls-tls-native-roots (not the `-no-provider` variant): the same feature literal codex-rs's
# own `codex-http-client` crate enables on its `reqwest` dependency — matches its native root
# store. `default-tls` stays enabled too (workspace default), so the Codex client must force the
# backend explicitly via `.use_rustls_tls()` (see executor.rs); other executors are unaffected
# since they never opt into rustls.
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
rustls = { workspace = true }
# Pinned only for exact version parity with codex-rs's resolved dependency graph (M5-Q1); not
# called directly — `rustls::crypto::aws_lc_rs` (gated by rustls's `aws_lc_rs` feature) wraps it.
aws-lc-rs = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
polyflare-testkit = { path = "../polyflare-testkit" }
