[package]
name = "polyflare-codex"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
polyflare-core = { path = "../polyflare-core" }
# rustls-tls-native-roots (not the `-no-provider` variant): the same feature literal codex-rs's
# own `codex-http-client` crate enables on its `reqwest` dependency — matches its native root
# store. `default-tls` stays enabled too (workspace default), so the Codex client must force the
# backend explicitly via `.use_rustls_tls()` (see executor.rs); other executors are unaffected
# since they never opt into rustls.
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }
rustls = { workspace = true }
# Pinned only for exact version parity with codex-rs's resolved dependency graph (M5-Q1); not
# called directly — `rustls::crypto::aws_lc_rs` (gated by rustls's `aws_lc_rs` feature) wraps it.
aws-lc-rs = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
# Codex-version auto-resolution (`codex_version`): `tokio::sync::Mutex` single-flight guard in
# library code; `tracing` for the minor/major fingerprint-drift warning.
tokio = { workspace = true }
tracing = { workspace = true }
# `polyflare login` (authorization_code + PKCE): random verifier/state bytes.
rand = { workspace = true }
# Egress header parity (fingerprint-parity gate): the exact crate codex-rs's own
# `get_codex_user_agent()` calls for the OS/arch segment of its User-Agent string
# (`login/src/auth/default_client.rs` in `openai/codex`) — see `codex_headers.rs`.
os_info = "3"
# M5a: the WS upstream transport (`ws::conn::WsConn`) lives here beside `CodexExecutor` — this
# crate is where WS is in-scope per the module doc above. Promoted from `polyflare-server`'s
# `[dev-dependencies]` (where it still remains, for the `ws_vs_sse_probe` example) to a real
# dependency here, now that a non-POC caller exists. Same major.minor + the same
# `rustls-tls-webpki-roots` feature as that dev-dependency, so it resolves to the identical
# `rustls = "=0.23.36"` / `aws-lc-rs = "=1.16.2"` this crate already pins (see above) rather than
# pulling a second TLS stack.
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
polyflare-testkit = { path = "../polyflare-testkit" }
