[package]
name = "polyflare-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "polyflare_server"
path = "src/lib.rs"

[[bin]]
name = "polyflare"
path = "src/main.rs"

[dependencies]
polyflare-core = { path = "../polyflare-core" }
polyflare-codex = { path = "../polyflare-codex" }
polyflare-anthropic = { path = "../polyflare-anthropic" }
polyflare-store = { path = "../polyflare-store" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
# /api/logs/stream: adapts the log bus's broadcast::Receiver into a Stream for the SSE body.
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# usage_refresh: polls each account's /wham/usage for live rate-limit windows + reset times.
reqwest = { workspace = true }
# Embedded dashboard assets (dashboard/dist), served under /dashboard.
rust-embed = { workspace = true }

[dev-dependencies]
polyflare-testkit = { path = "../polyflare-testkit" }
reqwest = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
# ws_vs_sse_probe example only: a WebSocket client for the Codex backend POC. Pinned to the same
# rustls 0.23 the workspace uses so it reuses the installed aws-lc-rs crypto provider.
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
