[package]
name = "polyflare-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "polyflare_server"
path = "src/lib.rs"

[[bin]]
name = "polyflare"
path = "src/main.rs"

[dependencies]
polyflare-core = { path = "../polyflare-core" }
polyflare-codex = { path = "../polyflare-codex" }
polyflare-anthropic = { path = "../polyflare-anthropic" }
polyflare-store = { path = "../polyflare-store" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
# /api/logs/stream: adapts the log bus's broadcast::Receiver into a Stream for the SSE body.
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# usage_refresh: polls each account's /wham/usage for live rate-limit windows + reset times.
reqwest = { workspace = true }
# Embedded dashboard assets (dashboard/dist), served under /dashboard.
rust-embed = { workspace = true }

[dev-dependencies]
polyflare-testkit = { path = "../polyflare-testkit" }
reqwest = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
# ws_vs_sse_probe example: a WebSocket client for the Codex backend POC. Pinned to the same
# rustls 0.23 the workspace uses so it reuses the installed aws-lc-rs crypto provider.
#
# M5a deflate adoption: bumped from 0.26 to 0.28.0 (the same `[patch.crates-io]`-redirected
# OpenAI fork `polyflare-codex` now pins — see workspace root `Cargo.toml`) SPECIFICALLY so
# `ws_deflate_probe.rs` can build a real `WebSocketConfig` with `permessage_deflate` enabled and
# thereby actually exercise decode support live, mirroring `ws::conn::WsConn::connect` instead of
# hand-writing the `Sec-WebSocket-Extensions` header (which the fork's client handshake now
# rejects with `InvalidHeader` unless the response's confirmed extension matches a real client
# config — see `.superpowers/sdd/m5a-deflate-forks-report.md`).
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
# `tungstenite::extensions::{ExtensionsConfig, compression::deflate::DeflateConfig}` /
# `tungstenite::protocol::WebSocketConfig` for `ws_deflate_probe.rs` — same versions/forks as
# `polyflare-codex`'s direct dependency.
tungstenite = { version = "0.27.0", features = ["deflate"] }
