[package]
name = "polyflare-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "polyflare_server"
path = "src/lib.rs"

[[bin]]
name = "polyflare"
path = "src/main.rs"

[dependencies]
polyflare-core = { path = "../polyflare-core" }
polyflare-codex = { path = "../polyflare-codex" }
polyflare-anthropic = { path = "../polyflare-anthropic" }
polyflare-store = { path = "../polyflare-store" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
# /api/logs/stream: adapts the log bus's broadcast::Receiver into a Stream for the SSE body.
tokio-stream = { version = "0.1", features = ["sync"] }
# B5 Task 4: the keepalive recovery-wait combinator (`ingress.rs::layer2_wait_stream`) — its
# control flow (a bounded sleep/keepalive loop, then an async re-select + executor call, then
# either splice a real stream or yield one in-band error frame) is naturally expressed with
# `stream!`'s `yield`/early-`return` syntax; a hand-rolled `poll_next` state machine for the same
# shape would be materially harder to review for the POST-200 in-band-error invariant. Pinned to
# the same major.minor line as the rest of this Cargo.toml's un-exotic deps (no pinned patch, no
# git dep — a plain, small, widely-used crate).
async-stream = "0.3"
bytes = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# usage_refresh: polls each account's /wham/usage for live rate-limit windows + reset times.
reqwest = { workspace = true }
# Embedded dashboard assets (dashboard/dist), served under /dashboard.
rust-embed = { workspace = true }
# D18 Task 2: `keys.rs`'s CSPRNG client-key generation. Same vetted RNG this workspace already
# uses for other security-critical randomness (`polyflare_codex::oauth`'s PKCE verifier/state) —
# reused here, not a redundant/second RNG dependency.
rand = { workspace = true }
# D18 Task 2: `keys.rs` base64url-nopad-encodes the raw client key. Already a workspace dep used
# identically by `polyflare_codex::oauth` for PKCE — promoted from this crate's dev-dependencies
# (where it was already present for test code) to a real dependency now that `src/keys.rs` needs
# it too.
base64 = { workspace = true }

[dev-dependencies]
polyflare-testkit = { path = "../polyflare-testkit" }
reqwest = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
zeroize = { workspace = true }
# ws_vs_sse_probe example: a WebSocket client for the Codex backend POC. Pinned to the same
# rustls 0.23 the workspace uses so it reuses the installed aws-lc-rs crypto provider.
#
# M5a deflate adoption: bumped from 0.26 to 0.28.0 (the same `[patch.crates-io]`-redirected
# OpenAI fork `polyflare-codex` now pins — see workspace root `Cargo.toml`) SPECIFICALLY so
# `ws_deflate_probe.rs` can build a real `WebSocketConfig` with `permessage_deflate` enabled and
# thereby actually exercise decode support live, mirroring `ws::conn::WsConn::connect` instead of
# hand-writing the `Sec-WebSocket-Extensions` header (which the fork's client handshake now
# rejects with `InvalidHeader` unless the response's confirmed extension matches a real client
# config — see `.superpowers/sdd/m5a-deflate-forks-report.md`).
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
# `tungstenite::extensions::{ExtensionsConfig, compression::deflate::DeflateConfig}` /
# `tungstenite::protocol::WebSocketConfig` for `ws_deflate_probe.rs` — same versions/forks as
# `polyflare-codex`'s direct dependency.
tungstenite = { version = "0.27.0", features = ["deflate"] }
