[package]
name = "polyflare-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx = { workspace = true }
chacha20poly1305 = { workspace = true }
zeroize = { workspace = true }
fernet = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
